--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@mui/x-data-grid": "^6.19.6",
+    "@nivo/bar": "^0.85.1",
+    "@nivo/pie": "^0.85.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
