--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
